force-app/main/default/objects/numm__Schema_Ecriture__c/numm__Schema_Ecriture__c.object-meta.xml
<CustomObject>
    <label>Schéma d&#39;écriture</label>
    <nameField>
        <label>Nom du Schéma d&#39;écriture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schémas d&#39;écriture</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>