force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Actif__c.field-meta.xml
<CustomField>
    <fullName>numm__Actif__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>