force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Categorie_journal__c.field-meta.xml
<CustomField>
    <fullName>numm__Categorie_journal__c</fullName>
    <label>Catégorie du journal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vente</fullName>
                <default>true</default>
                <label>Vente</label>
            </value>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Opération Diverse</fullName>
            </value>
            <value>
                <fullName>Relevé bancaire</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Abonnement</fullName>
            </value>
            <value>
                <fullName>Clôture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>