force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>