force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Erreur__c.field-meta.xml
<CustomField>
    <fullName>numm__Erreur__c</fullName>
    <formula>IF(
   numm__Repartition_HT__c &gt; 1, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Erreur&quot;) &amp; &#39; La somme des taux de répartition sur les lignes HT ne peut pas dépasser 100%.&#39;,
   IF(
      numm__TECH_Nombre_de_lignes__c != numm__TECH_Nombre_de_lignes_valides__c, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Erreur&quot;) &amp; &#39; Une ou plusieurs lignes de schémas d\&#39;écritures générales ne sont pas valide.&#39;, &#39;&#39;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Affiche un message si le schéma n&#39;est pas valide.</inlineHelpText>
    <label>Erreur</label>
    <type>Text</type>
</CustomField>