force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__RelBqMarquerTraite__c.field-meta.xml
<CustomField>
    <fullName>numm__RelBqMarquerTraite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Les écritures des relevés bancaires lièes a ce schéma seront  marquées comme traitées.</inlineHelpText>
    <label>Exclure des relevés bancaires</label>
    <type>Checkbox</type>
</CustomField>