force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Repartition_HT__c.field-meta.xml
<CustomField>
    <fullName>numm__Repartition_HT__c</fullName>
    <label>Somme répartition HT</label>
    <summarizedField>numm__Schema_ecriture_generale__c.numm__Taux_repartition__c</summarizedField>
    <summaryFilterItems>
        <field>numm__Schema_ecriture_generale__c.numm__TECH_Categorie_compte__c</field>
        <operation>equals</operation>
        <value>HT</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__Schema_ecriture_generale__c.numm__Schema_ecriture__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>