force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__TECH_Nombre_de_lignes__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Nombre_de_lignes__c</fullName>
    <label>TECH Nombre de lignes</label>
    <summaryForeignKey>numm__Schema_ecriture_generale__c.numm__Schema_ecriture__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>