force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__TECH_Nombre_de_lignes_TTC__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Nombre_de_lignes_TTC__c</fullName>
    <label>TECH Nombre de lignes TTC</label>
    <summaryFilterItems>
        <field>numm__Schema_ecriture_generale__c.numm__TECH_Categorie_compte__c</field>
        <operation>equals</operation>
        <value>TTC</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__Schema_ecriture_generale__c.numm__Schema_ecriture__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>