force-app/main/default/objects/numm__Schema_Ecriture__c/fields/numm__Valide__c.field-meta.xml
<CustomField>
    <fullName>numm__Valide__c</fullName>
    <formula>IF(
  OR(  numm__Repartition_HT__c  &gt; 1,
       numm__TECH_Nombre_de_lignes__c !=  numm__TECH_Nombre_de_lignes_valides__c 
  ),
  false,
  true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valide</label>
    <type>Checkbox</type>
</CustomField>