force-app/main/default/objects/numm__Schema_Ecriture__c/listViews/numm__Tout.listView-meta.xml
<ListView>
    <fullName>numm__Tout</fullName>
    <columns>NAME</columns>
    <columns>numm__Description__c</columns>
    <columns>numm__Categorie_journal__c</columns>
    <columns>numm__Valide__c</columns>
    <columns>numm__Actif__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>